[package]
name = "asterisk-cli"
version = "1.0.0"
edition = "2021"
description = "A lightweight command-line tool for rapidly testing API endpoints"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
glob = "0.3"
regex = "1.10"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strsim = "0.10"
tokio = { version = "1.35", features = ["full"] }
futures-util = "0.3"
thiserror = "1.0"
url = "2.5"
napi = { version = "2.14", default-features = false, features = ["napi4"] }
napi-derive = "2.14"

[dev-dependencies]
wiremock = "0.5"
tokio-test = "0.4"

[build-dependencies]
napi-build = "2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[[bin]]
name = "asterisk"
path = "src/main.rs"
