[package]
name = "asterisk-cli"
version = "2.0.1"
edition = "2021"
description = "A lightweight command-line tool for rapidly testing API endpoints"
license = "MIT"
readme = "README.md"
repository = "https://github.com/saint0x/asterisk.git"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[[bin]]
name = "asterisk"
path = "src/main.rs"
