[package]
name = "asterisk-cli"
version = "2.0.1"
edition = "2021"
description = "A lightweight command-line tool for rapidly testing API endpoints"
license = "MIT"
readme = "README.md"
repository = "https://github.com/saint0x/asterisk.git"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
toml = "0.8"
actix-web = "4"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[[bin]]
name = "asterisk"
path = "src/main.rs"

[[bin]]
name = "asterisk-server"
path = "src/server.rs"
